Now storing aionis-daemon in /usr/sbin, zelos.jpg in /usr/share/aionis

--- a/README
+++ b/README
@@ -6,3 +6,11 @@ Requires:
 pm-utils
 xcowsay
 acpi
+zsh
+
+To install:
+sudo ./aionis-setup
+
+To make sure aionis is run at startup, add it to the daemons array in
+/etc/rc.conf:
+DAEMONS=(... aionis)
